--- a/table.css
+++ b/table.css
@@ -40,3 +40,22 @@ td{
     text-align: center;
     padding: 10px;
 }
+
+form{
+    margin-top: 10px;
+    font-size: 24px;
+    text-align: left;
+}
+input, select{
+    margin: 2px;
+    height: 30px;
+    width: 300px;
+    font-size: 20px;
+    border-radius: 5px;
+    border: 2px solid black;
+}
+
+fieldset{
+    border-radius: 10px;
+    border-color: brown;
+}
